test/corpus/scoped_with_struct.txt
==================
Scoped identifier with struct
==================

Emotion::Happy { amount: 10 }

---

(source_file
  (entity
    (scoped_identifier
      (identifier)
      (identifier))
    (struct_body
      (field_assignment
        (identifier)
        (number)))))
